--- a/integrations/whatsapp/package.json
+++ b/integrations/whatsapp/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.6",
     "express": "^5.2.1",
     "qrcode-terminal": "^0.12.0",
+    "qrcode": "^1.5.4",
     "whatsapp-web.js": "^1.34.6"
   }
 }
